--- a/adsmodule/build.gradle
+++ b/adsmodule/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.library'
+    id 'kotlin-android'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
     id 'maven-publish'
 }
 
@@ -28,6 +30,7 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    namespace 'com.module.ads'
 }
 
 dependencies {
@@ -35,7 +38,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'com.google.ads.mediation:facebook:6.11.0.0'
-    implementation 'androidx.lifecycle:lifecycle-process:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-process:2.5.0'
+    implementation 'com.google.firebase:firebase-core:21.0.0'
     implementation 'com.google.firebase:firebase-config:21.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -53,6 +57,7 @@ dependencies {
         }
     }
 }
+apply plugin: 'com.google.gms.google-services'
 
 afterEvaluate {
     publishing {
