--- a/adsmodule/build.gradle
+++ b/adsmodule/build.gradle
@@ -36,16 +36,16 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'com.google.ads.mediation:facebook:6.11.0.0'
-    implementation 'androidx.lifecycle:lifecycle-process:2.5.0'
-    implementation 'com.google.firebase:firebase-config:21.1.0'
+    implementation 'androidx.lifecycle:lifecycle-process:2.5.1'
+    implementation 'com.google.firebase:firebase-database:20.0.5'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.google.android.play:core:1.10.3'
     implementation 'com.android.billingclient:billing:5.0.0'
-    implementation 'com.intuit.sdp:sdp-android:1.0.6'
-    implementation 'com.google.android.gms:play-services-ads:21.0.0'
+    implementation 'com.intuit.sdp:sdp-android:1.1.0'
+    implementation 'com.google.android.gms:play-services-ads:21.1.0'
     constraints {
         implementation('androidx.work:work-runtime:2.7.0') {
             because '''androidx.work:work-runtime:2.1.0 pulled from play-services-ads
@@ -60,7 +60,6 @@ afterEvaluate {
         publications {
             release(MavenPublication) {
                 from components.release
-
                 groupId = 'com.github.tariqzia7523'
                 artifactId = 'SimpleAdsModule'
                 version = '1.0.8'
