--- a/adsmodule/src/main/AndroidManifest.xml
+++ b/adsmodule/src/main/AndroidManifest.xml
@@ -2,5 +2,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.module.adsmodule">
     <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID"/>
 </manifest>
